--- a/Spleeter/requirements.txt
+++ b/Spleeter/requirements.txt
@@ -1,1 +1,3 @@
-spleeter
+spleeter 
+# se a vm tiver menos de 4GB de ram executar o seguinte comando
+# pip3.7 install --no-cache-dir -r requirements.txt
