Connection between Spleeter and Segmentation.js using RabbitMQ

--- a/SourceSeparation/Spleeter/requirements.txt
+++ b/SourceSeparation/Spleeter/requirements.txt
@@ -1,3 +1,4 @@
 spleeter 
 # se a vm tiver menos de 4GB de ram executar o seguinte comando
 # pip3.7 install --no-cache-dir -r requirements.txt
+pika
