--- a/.gitignore
+++ b/.gitignore
@@ -286,4 +286,6 @@ dmypy.json
 
 pretrained_models/
 
+datasetFeatures/
+
 # End of https://www.toptal.com/developers/gitignore/api/linux,python,dotenv,node,vagrant
