--- a/Manager/package.json
+++ b/Manager/package.json
@@ -5,6 +5,7 @@
   "main": "manager.js",
   "dependencies": {
     "amqplib": "^0.8.0",
+    "axios": "^0.21.4",
     "mongodb": "^4.0.1",
     "natural-orderby": "^2.0.3",
     "natural-sort": "^1.0.0"
